<resources>

    <string name="app_name">Insight</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Insight</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="add">Create</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="event">Event</string>
    <string name="venue">Venue</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="media">Media</string>
    <string name="desc">Description</string>
    <string name="title_activity_event_form">EventForm</string>
    <string name="create">Create</string>
    <string name="dateSliderTitle">Selected date</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_event_view">EventViewActivity</string>

    <string-array name="samples">
        <item>3</item>
        <item>2</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    <string-array name="mapsList">
        <item>com1_map_radar.csv</item>
        <item>BLK15LVL3_map_radar.csv</item>
    </string-array>
    <string-array name="hmapsList">
        <item>com1_map_hyperbolic.csv</item>
        <item>com1_L1_L2_map_hyperbolic.csv</item>
        <item>com1_L1_5strong_H.csv</item>
        <item>com1_L1_gt85_H.csv</item>
        <item>com1_L2_5strong_H.csv</item>
        <item>com1_L2_gt85_H.csv</item>
        <item>com1_L1_L2_5strong_H.csv</item>
        <item>com1_L1_L2_gt85_H.csv</item>
        <item>BLK15LVL3_map_hyperbolic.csv</item>
        <item>com1_L1_130512_map_hyperbolic.csv</item>
    </string-array>
    <string-array name="modelList">
        <item>Hyperbolic</item>
        <item>RADAR</item>
    </string-array>
    <string-array name="Venue_Array">
        <item>COM 1, Foyer Area</item>
        <item>Programming Lab 1</item>
		<item>Programming Lab 2</item>
		<item>Programming Lab 3</item>
		<item>Programming Lab 4</item>
		<item>Lobby</item>
		<item>Graduate Student Lounge</item>
		<item>Foyer Area</item>
		<item>Computing Club</item>
		<item>Student Lounge</item>
		<item>VC Room</item>
    </string-array>

    <string name="title_activity_friend_view">FriendViewActivity</string>
    <string name="title_activity_playvid">Playvid</string>

</resources>